--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -219,7 +219,14 @@ button {
 }
 
 /* Change background header */
+.scroll-header {
+   background-color: var(--body-color);
+   box-shadow: 0 1px 4px hsla(228, 4%, 15%, .1);
+}
 
+.scroll-header .nav__logo {
+   color: var(--first-color);
+}
 
 /* Active link */
 
@@ -327,10 +334,46 @@ button {
 }
 
 /*=============== BUTTON ===============*/
+.button {
+   display: inline-block;
+   background: linear-gradient(101deg,
+         hsl(228, 66%, 53%),
+         hsl(228, 66%, 47%));
+   color: #fff;
+   padding: 14px 28px;
+   border-radius: .5rem;
+   font-size: var(--normal-font-size);
+   font-weight: var(--font-medium);
+   box-shadow: 0 4px 8px hsla(228, 66%, 45%, 0.25);
+   transition: .3s;
+   cursor: pointer;
+}
 
+.button {
+   box-shadow: 0 4px 12px hsla(228, 66%, 45%, 0.25);
+}
+
+.nav__button {
+   display: none;
+}
 
 /*=============== LOGOS ===============*/
+.logos__container {
+   padding-top: 2rem;
+   grid-template-columns: repeat(2, 1fr);
+   gap: 3rem 2rem;
+   justify-items: center;
+}
 
+.logo__img img {
+   height: 60px;
+   opacity: .2;
+   transition: .3s;
+}
+
+.logo__img img:hover {
+   opacity: .6;
+}
 
 /*=============== POPULAR ===============*/
 
