--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -143,8 +143,9 @@ button {
 
 .main {
    overflow: hidden;
-   /* For the animations ScrollReveal*/
 }
+
+/* For the animations ScrollReveal*/
 
 /*=============== HEADER & NAV ===============*/
 .header {
@@ -229,7 +230,14 @@ button {
 }
 
 /* Active link */
-
+.active-link {
+   background: linear-gradient(101deg,
+         hsl(228, 66%, 53%),
+         hsl(228, 66%, 47%));
+   color: #fff;
+   box-shadow: 0 4px 8px hsla(228, 66%, 45%, .25);
+   transition: .3s;
+}
 
 /*=============== HOME ===============*/
 .home {
