--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -807,9 +807,32 @@ button {
 
 /*=============== SCROLL UP ===============*/
 
+.scrollup {
+   position: fixed;
+   right: 1rem;
+   /*bottom: 8rem;*/
+   bottom: -30%;
+   background-color: var(--container-color);
+   box-shadow: 0 8px 12px hsla(228, 66%, 45%, .1);
+   padding: 0.35rem;
+   display: inline-flex;
+   color: var(--title-color);
+   border-radius: .25rem;
+   font-size: 1.25rem;
+   z-index: var(--z-tooltip);
+   transition: .3s;
+}
+
+.scrollup:hover {
+   transform: translateY(-0.25rem);
+   color: var(--first-color);
+}
 
 /* Show Scroll Up*/
 
+.show-scroll {
+   bottom: 8rem;
+}
 
 /*=============== BREAKPOINTS ===============*/
 /* For small devices */
